--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Orbitron', sans-serif;
-  background-image: url("JE.png");
+  background-color: #808080;
 }
 
 #calculator {
